--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -13,13 +13,11 @@
   </button>
 
   <!-- CODE -->
-  <div class="code font-weight-bold" [innerHTML]="displayCode | safeHtml">
-    {{ displayCode }}
-  </div>
+  <div class="code font-weight-bold" [innerHTML]="displayCode | safeHtml"></div>
 
   <!-- NAME -->
   <div #name
-    [popper]="displayName"
+    [popper]="popperName"
     [popperTrigger]="'hover'"
     [popperPlacement]="'bottom'"
     [popperDisabled]="!isTruncated"
