--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -29,14 +29,17 @@
               <div>
                 <input *ngIf = "mod.inputType !== 'date'" class="modifier-event-indicator" formControlName="valueA" [type]="mod.inputType">
               </div>
-              <div *ngIf = "mod.inputType === 'date'" >
-                <input class="modifier-calender" formControlName="valueA" [type]="mod.inputType" type="date" clrDate>
+
+
+          <div *ngIf = "mod.inputType === 'date'">
+                <input class="modifier-calender" [ngModel]="myDate | date:'yyyy-MM-dd'"
+                       (ngModelChange)="myDate = $event" formControlName="valueA" placeholder="YYYY-MM-DD" [type]="mod.inputType" type="date" clrDate>
               </div>
              <ng-container  *ngIf = "dropdownOption.selected[i] === 'Between'">
                <div class="and-text">
                  <div>and</div>
                </div>
-               <div>
+               <div >
                  <input *ngIf = "mod.inputType !== 'date'"  class="modifier-event-indicator" formControlName="valueB" [type]="mod.inputType">
                </div>
              </ng-container>
@@ -45,7 +48,8 @@
                   <div>and</div>
                 </div>
                 <div>
-                  <input *ngIf = "mod.inputType === 'date'" class="modifier-calender" formControlName="valueB" [type]="mod.inputType" type="date" clrDate>
+                  <input *ngIf = "mod.inputType === 'date'" [ngModel]="selectedDate | date:'yyyy-MM-dd'"
+                         (ngModelChange)="selectedDate = $event"  class="modifier-calender" formControlName="valueB" placeholder="YYYY-MM-DD" [type]="mod.inputType" type="date" clrDate>
                 </div>
               </ng-container>
         </div>
