--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -10,24 +10,30 @@
 
 <!--dropdown for conditions start-->
 <div class="dropdown-search-container">
-  <div [ngClass]="{'condition-dropdown' : showdropDown()}">
-    <ng-container *ngIf = "showdropDown() && !loading">
+  <div [ngClass]="{'condition-dropdown' : showDropDown()}">
+    <ng-container *ngIf = "showDropDown() && !loading">
       <clr-dropdown>
         <button type="button" class="btn btn-outline-primary" clrDropdownTrigger>
           Dropdown
           <clr-icon shape="caret down"></clr-icon>
         </button>
         <clr-dropdown-menu *clrIfOpen>
-          <label class="dropdown-header">Dropdown header</label>
-          <button type="button" clrDropdownItem>Action 1</button>
-          <button type="button" disabled clrDropdownItem>Disabled Action</button>
+          <ng-container *ngFor="let criteria of domainTypes">
+            <button *ngIf="criteria.name ==='ICD9 Codes' || criteria.name ==='ICD10 Codes' "
+
+                    id="criteria.type"
+                    class="dropdown-item"
+                    type="button"
+                    clrDropdownItem>{{criteria.name}}</button>
+          </ng-container>
+
         </clr-dropdown-menu>
       </clr-dropdown>
     </ng-container>
   </div>
 
 
-<div [ngClass]="showdropDown()? 'search-container' :'search-width'" >
+<div [ngClass]="showDropDown()? 'search-container' :'search-width'" >
   <app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
 </div>
 
