RW-1073 complete styling and layout

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
@@ -147,3 +147,8 @@ input[type=radio] {
     text-align: center;
     font-size: 0.45rem;
 }
+
+.form-group > .checkbox-inline {
+    width: 24%;
+    margin-right: 1%;
+}
