RW-1092 code fixes

--- a/ui/src/app/cohort-review/set-annotation-create/set-annotation-create.component.html
+++ b/ui/src/app/cohort-review/set-annotation-create/set-annotation-create.component.html
@@ -76,11 +76,12 @@
 
     </section>
   </ng-container>
-  <app-annotation-item
-          *ngFor="let anno of (annotations$ | async)"
-          [annotation]="anno"
-          [showDataType]="showDataType">
-  </app-annotation-item>
+
+  <!--<app-annotation-item-->
+          <!--*ngFor="let anno of (annotations$ | async)"-->
+          <!--[annotation]="anno"-->
+          <!--[showDataType]="showDataType">-->
+  <!--</app-annotation-item>-->
 
   <div class="footer-button">
     <button
