--- a/ui/src/app/cohort-review/set-annotation-item/set-annotation-item.component.html
+++ b/ui/src/app/cohort-review/set-annotation-item/set-annotation-item.component.html
@@ -15,10 +15,13 @@
   </span>
 
   <button type="button" class="btn btn-sm btn-link" (click)="edit()">
-    <clr-icon shape="pencil" size="22"></clr-icon>
+    RENAME
+    <!--<clr-icon shape="pencil" size="22"></clr-icon>-->
   </button>
-  <button type="button" class="btn btn-sm btn-link text-danger" (click)="delete()">
-    <clr-icon shape="minus-circle" size="22"></clr-icon>
+  <span class="divider">|</span>
+  <button type="button" class="btn btn-sm btn-link" (click)="delete()">
+    DELETE
+    <!--<clr-icon shape="minus-circle" size="22"></clr-icon>-->
   </button>
 </div>
 
