--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -14,24 +14,24 @@
     <ng-container *ngIf = "showDropDown() && !loading">
 
 
-      <clr-dropdown>
-        <button type="button" class="btn btn-outline-primary" clrDropdownTrigger>
-          Dropdown
-          <clr-icon shape="caret down"></clr-icon>
-        </button>
-        <clr-dropdown-menu *clrIfOpen>
-          <ng-container *ngFor="let criteria of domainTypes">
-            <button *ngIf="criteria.name ==='ICD9 Codes' || criteria.name ==='ICD10 Codes' "
-                    id="criteria.type"
-                    class="dropdown-item"
-                    type="button"
-                    (click)="launchTree(criteria)"
-                    clrDropdownItem>{{criteria.name}}</button>
-          </ng-container>
+      <!--<clr-dropdown>-->
+        <!--<button type="button" class="btn btn-outline-primary" clrDropdownTrigger>-->
+          <!--Dropdown-->
+          <!--<clr-icon shape="caret down"></clr-icon>-->
+        <!--</button>-->
+        <!--<clr-dropdown-menu *clrIfOpen>-->
+          <!--<ng-container *ngFor="let criteria of domainTypes">-->
+            <!--<button *ngIf="criteria.name ==='ICD9 Codes' || criteria.name ==='ICD10 Codes' "-->
+                    <!--id="criteria.type"-->
+                    <!--class="dropdown-item"-->
+                    <!--type="button"-->
+                    <!--(click)="launchTree(criteria)"-->
+                    <!--clrDropdownItem>{{criteria.name}}</button>-->
+          <!--</ng-container>-->
 
-        </clr-dropdown-menu>
-      </clr-dropdown>
-<!--<app-crit-dropdown></app-crit-dropdown>-->
+        <!--</clr-dropdown-menu>-->
+      <!--</clr-dropdown>-->
+<app-crit-dropdown (onOptionChange)="optionChange($event)"></app-crit-dropdown>
     </ng-container>
   </div>
 
